Improve JdocServer README (#10)