@@ -3,7 +3,14 @@
 [![Maven Central](https://img.shields.io/maven-central/v/com.netflix/com.netflix.tools.jdocserver)](https://central.sonatype.com/artifact/com.netflix/com.netflix.tools.jdocserver)
 ![JDK 25+](https://img.shields.io/badge/JDK-25%2B-blue)
 
-`jdocserver` provides browsable API documentation for Java compilation contexts. It resolves classes and sources from standard JDK tool arguments and renders requested types with the standard doclet.
+`jdocserver` turns a modular Java compilation context into a local, browsable API reference. It uses the selected JDK's standard HTML doclet, so project and platform documentation has the same navigation, search, and presentation as generated Javadoc without requiring the complete site to be built before the server starts.
+
+- Browse the JDK without additional configuration
+- Browse the modules selected by a `ja` workspace
+- Reuse standard module, source, release, system, and access options from compilation
+- Generate the overview in the background and type pages on demand
+- Follow links between project and JDK documentation within one local server
+- Embed the documentation handler in another JDK HTTP server
 
 > [!IMPORTANT]
 > This tool is currently in preview. We are collecting feedback for all of the tools together in [Discussions](https://github.com/Netflix/ja/discussions).
@@ -15,81 +22,119 @@
 
 Follow the `ja` [Installation Guide](https://github.com/Netflix/ja#installation) to install the bundled tools, including `jdocserver`.
 
-For standalone use, `jar` and `jmod` artifacts for the tool are available on Maven Central.
+For standalone use, `jar` and `jmod` artifacts are available on Maven Central. We require JDK 25 or later.
 
-## Quick Start
+## Quick start
 
-Start JdocServer without compilation arguments to browse the running JDK. This requires the selected
-JDK's source archive at `lib/src.zip`:
-
-```sh
-jdocserver
-```
-
-To browse an application compilation context, supply an existing argument file:
+From a `ja` workspace, open API documentation for the modules selected by the current directory:
 
 ```sh
-jdocserver @main.args
+ja doc --browse
 ```
 
-JdocServer reports the selected context and inputs, lazy generation behavior, binding, and URL:
+Open a qualified type directly:
 
-```text
-JDK home: /path/to/jdk
-Module path: build/modules:lib/example.jar
-Module source path: src
-Source path: lib/example-sources.jar
-Temporary workspace: /tmp/jdocserver-1234567890
-Temporary workspace is removed on shutdown.
+```sh
+ja doc --browse java.lang.String
+ja doc --browse com.example.application.Main
+```
+
+`ja` resolves the workspace's modular compilation context and supplies it to `jdocserver`.
+
+Use the standalone command to browse the running JDK:
+
+```sh
+jdocserver --browse
+```
+
+Open a JDK type directly with the standalone command:
+
+```sh
+jdocserver --browse=java.lang.String
+```
+
+Browsing the JDK requires its source archive at `lib/src.zip`.
+
+Without `--browse`, the server prints its URL and remains in the foreground until interrupted:
+
+```console
+$ jdocserver
+...
 Generating standard Javadoc overview in the background...
 Type documentation is generated on demand.
-Binding to loopback by default. For all interfaces use "-b 0.0.0.0" or "-b ::".
 Serving Java API documentation on 127.0.0.1 port 8000
 URL http://127.0.0.1:8000/
 ```
 
-Browse it automatically with:
+## Browse a project
 
-```sh
-jdocserver --browse @main.args
-```
-
-For the default JDK and modular contexts, the index is the standard Javadoc module overview. Repeated `-group` options provide the familiar module tabs:
-
-```sh
--group "Source Modules" 'com.example.*' \
--group "Java SE" 'java.*' \
--group "JDK" 'jdk.*' \
--group "Other" '*'
-```
-
-The overview, module pages, package pages, navigation, search data, styles, and scripts are generated in the background by the selected JDK's HTML doclet. Requests for those resources wait for that shared generation task. Class pages are generated when their standard links are followed. Links between generated pages target the local server, including links into locally supplied JDK sources.
-
-## Compilation Contexts
-
-JdocServer accepts modular compilation options:
+Supply the same modular Java options used to compile the project:
 
 ```sh
 jdocserver \
   --module-path build/modules:lib/example.jar \
   --module-source-path src \
-  --source-path lib/example-sources.jar \
-  --system "$JAVA_HOME"
+  --module com.example.application \
+  --source-path lib/example-sources.jar
 ```
 
-Module-path, module-source-path, source-path, and system entries retain their standard JDK ordering and lookup semantics. Argument files use the same one-argument-per-line form produced by Jig, Jist workspace generation, and other JDK tooling.
+JdocServer also accepts argument files. For example, `main.args` can contain one argument on each non-empty line:
 
-## Server
+```text
+--module-path
+build/modules:lib/example.jar
+--module-source-path
+src
+--module
+com.example.application
+--source-path
+lib/example-sources.jar
+```
 
-JdocServer listens on `127.0.0.1` port `8000` by default. Select the binding or port explicitly with:
+Start the server with that context and open its overview:
 
 ```sh
-jdocserver -b 0.0.0.0 --port 8080 @main.args
+jdocserver --browse @main.args
 ```
+
+Module-path, module-source-path, source-path, and system entries retain their standard JDK ordering and lookup semantics. Other supported inputs include `--add-modules`, `--limit-modules`, `--add-reads`, `--add-exports`, `--patch-module`, `--release`, `--source`, and `--enable-preview`.
+
+Select another JDK with `--system`:
+
+```sh
+jdocserver --system /path/to/jdk @main.args
+```
+
+The selected JDK must provide `lib/src.zip` so its module and package documentation can be included.
+
+## Generated documentation
+
+The overview, module and package pages, navigation, search data, styles, and scripts are generated in the background by the selected JDK's standard HTML doclet. Requests for those resources wait for the shared generation task when necessary.
+
+Type pages are generated when their standard links are followed or when a direct `/type` request is made. Concurrent requests for the same type share one generation task, and generated resources remain available for the lifetime of the server. Links between generated pages target the local server, including links to locally supplied JDK sources.
+
+Generated files live in a temporary workspace that is removed when the server shuts down.
+
+For the default JDK, the index is the standard Javadoc module overview.
+
+## Server options
+
+JdocServer listens on `127.0.0.1` port `8000` by default. Select the binding or port explicitly:
+
+```sh
+jdocserver --bind-address 0.0.0.0 --port 8080 @main.args
+```
+
+The default loopback binding keeps the server local. Binding to `0.0.0.0` or `::` exposes it on all available interfaces.
 
 The short option `-p` retains its standard Java meaning, `--module-path`; server ports therefore use `--port`.
 
-Overview generation begins during startup without delaying the server binding. Requests join that generation if it is still running. Type documentation is generated on demand; concurrent requests for the same type share one generation, and generated resources remain available for the lifetime of the server.
+Open the index or a type when the server starts:
+
+```sh
+jdocserver --browse @main.args
+jdocserver --browse=com.example.application.Main @main.args
+```
 
 ## Embedding
 
@@ -100,19 +145,14 @@ try (var docs = DocumentationHandler.create(arguments)) {
     var server = HttpServer.create(new InetSocketAddress("127.0.0.1", 0), 0);
     server.createContext("/", docs);
     server.start();
+    try {
+        // Run the host application.
+    } finally {
+        server.stop(0);
+    }
 }
 ```
 
-`DocumentationHandler.optionChecker()` exposes the standard documentation and file-manager options accepted by `create`. A host can use `indexUri()` or `typeUri(qualifiedName)` to obtain a request URI without depending on the handler's route layout. Resolve that request URI against the hosting server's base URI before presenting or opening it.
+The host controls the HTTP server lifecycle. Closing the handler removes its temporary documentation output.
 
-## Build and Test
-
-JdocServer is a JA source workspace:
-
-```sh
-./build.sh
-./test.sh
-```
-
-`build.sh` exports the modular JAR and platform JMODs containing the native `jdocserver` command under
-`build/repository`.
+`DocumentationHandler.optionChecker()` exposes the standard documentation and file-manager options accepted by `create`. Use `indexUri()` or `typeUri(qualifiedName)` to obtain a request URI without depending on the handler's route layout, then resolve it against the hosting server's base URI.
